<resources>
    <string name="app_name">Money app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="settings">SETTINGS</string>
    <string name="export_csv">EXPORT CSV</string>
    <string name="how_to_us">HOW TO US</string>
    <string name="date">Date</string>
    <string name="price">$100.00</string>
    <string name="title">Title</string>
    <string name="day">DAY</string>
    <string name="week">WEEK</string>
    <string name="seven_days">LAST 7 DAYS</string>
    <string name="thirty_days">LAST 30 DAYS</string>
    <string name="custom_range">CUSTOM RANGE</string>
    <string name="category_title">Category Title</string>
    <string name="add_title">Add Category Title</string>
    <string name="add_item_amount">Add Amount</string>
    <string name="select_image">Select Image</string>
    <string name="save">SAVE</string>
    <string name="currency">CURENCY</string>
    <string name="dollar">$USD</string>
    <string name="categories">CATEGORIES</string>
    <string name="time">DAILY AT 15:00</string>
    <string name="reminder">REMINDER</string>
    <string name="all_transactions">All Transactions</string>
    <string name="lastSevenDays">Last 7 Days</string>
    <string name="lastThirtyDays">Last 30 Days</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="category_name">Category Name</string>
    <string name="header">Header</string>
    <string name="select_period">Period</string>
    <string name="select_categroy">category</string>
    <string name="no_record_found">No Record Found</string>
    <string name="select_all_categories">Select All Categories</string>
    <string name="date_picker">date picker</string>
    <string name="time_picker">time picker</string>
    <string name="set_alarm">set alarm</string>
    <string name="stop_alarm">stop alarm</string>
    <string name="show_date">show date</string>
    <string name="show_time">show time</string>



    <string-array
        name="categories">
        <item>AUTO GAS</item>
        <item>AUTO REGISTRATION</item>
        <item>AUTO SERVICE</item>
        <item>BANK</item>
        <item>MEDICAL</item>
        <item>MIS</item>
        <item>TAX</item>
        <item>PETS</item>
        <item>TRANSPORT</item>
        <item>RECYCLE</item>
        <item>TRAVEL</item>
        <item>TV</item>
        <item>OTHERS</item>
        <item>ELECTRIC</item>
        <item>INTERNET</item>
        <item>TELEPHONE</item>
        <item>WATER</item>
        <item>CASH</item>
        <item>CHARITY</item>
        <item>CHILD CARE</item>
        <item>CLOTHING</item>
        <item>CREDIT CARD PAYMENT</item>
        <item>EATING</item>
        <item>EDUCATION</item>
        <item>ENTERTAINMENT</item>
        <item>GIFTS</item>
        <item>GROCERY</item>
        <item>GIFTS</item>
        <item>HEALTH</item>
        <item>HOME REPAIR</item>
        <item>HOUSEHOLD</item>
        <item>INSURANCE</item>
        <item>LOAN</item>

    </string-array>



    <string-array
        name="currency">
        <item>United States dollar</item>
        <item>Euro</item>
        <item>British pound</item>
        <item>Pakistan rupees</item>
        <item>Albanian lek</item>

    </string-array>

    <string-array
        name="currency_symbol">
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>Pkr</item>
        <item>L</item>

    </string-array>



</resources>
