<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.NavigationDrawerFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="#5A5855"

    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/transactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/transactions"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/transactions"/>



    </LinearLayout>


    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:text="@string/settings"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/export_csv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/export"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/export_csv"/>



    </LinearLayout>


    <LinearLayout
        android:id="@+id/how_to_us"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/how_to_use"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/how_to_us"/>



    </LinearLayout>


</LinearLayout>

    <FrameLayout
        android:id="@+id/overlayFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/overlayImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>



</RelativeLayout>

