<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:background="@color/primary"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/edit_category_title"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/category_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_below="@+id/title_layout"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="bottom">


        <EditText
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:hint="@string/category_name"
            android:inputType="textNoSuggestions|text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/divider"

            />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/btn_save_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/category_title_layout"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />



    </RelativeLayout>

</RelativeLayout>